...
                        <connections>
                            <outlet property="dataSource" destination="GZH-yr-eTx" id="6yE-Gt-8rx"/>
                            <outlet property="delegate" destination="GZH-yr-eTx" id="FyH-IR-e0l"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" id="mAZ-iq-e5g">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="plus" catalog="system" id="pYW-ph-Rh2">
                            <connections>
                                <action selector="plusButtonTapped:" destination="GZH-yr-eTx" id="scQ-dE-lql"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
