...
                                    </imageView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="pfT-33-Gff" userLabel="Inner Stack View">
                                        <rect key="frame" x="306.5" y="0.0" width="422.5" height="379"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Na3-qo-zUj" userLabel="First Name Outlet">
                                                <rect key="frame" x="0.0" y="0.0" width="422.5" height="106.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="firstNameDetails"/>
                                                <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="20"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Is4-05-yhB">
                                                <rect key="frame" x="0.0" y="136.5" width="422.5" height="106"/>
                                                <accessibility key="accessibilityConfiguration" identifier="secondNameDetails"/>
                                                <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="20"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LKr-Gh-LEj">
                                                <rect key="frame" x="0.0" y="272.5" width="422.5" height="106.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="phoneDetails"/>
                                                <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="20"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                        <color key="backgroundColor" red="0.0" green="0.78237394780000002" blue="0.71127821970000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <fontDescription key="fontDescription" name="CourierNewPSMT" family="Courier New" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WqI-bx-5Pg">
                                                <rect key="frame" x="260" y="0.0" width="469" height="115.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="emailDetails"/>
                                                <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="20"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
...
