...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3gY-1F-JYr">
                                            <rect key="frame" x="132" y="7" width="150" height="30"/>
                                            <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <constraints>
                                                <constraint firstAttribute="width" constant="150" id="4Oi-sb-D3K"/>
                                            </constraints>
                                            <state key="normal" title="Delete Contact">
                                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            </state>
                                            <connections>
                                                <action selector="deletePressed:" destination="iRf-X1-xmI" eventType="touchUpInside" id="WAf-16-dmK"/>
                                            </connections>
                                        </button>
...
                            <outlet property="dataSource" destination="1fI-yk-yV6" id="esy-XH-Xqm"/>
                            <outlet property="delegate" destination="1fI-yk-yV6" id="g8e-Ry-W8U"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Title" id="IiO-RW-VwI">
                        <barButtonItem key="rightBarButtonItem" title="Item" id="Ocb-aS-dEz"/>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="addButton" destination="Ocb-aS-dEz" id="RS2-bH-vA1"/>
                    </connections>
                </tableViewController>
...
