...
            text = contact.convertedHeight
        }
        title = description.0
        holder = description.1
    }
    
    static let nameLabel = NSLocalizedString("editNameLabel", comment: "First Name")
    static let nameHolder = NSLocalizedString("editNameHolder", comment: "Text Holder")
    
    static let surnameLabel = NSLocalizedString("editSurnameLabel", comment: "Last Name")
    static let surnameHolder = NSLocalizedString("editSurnameHolder", comment: "Text Holder")
    
    static let phoneLabel = NSLocalizedString("editPhoneLabel", comment: "Phone")
...
